# rinha-backend-rust-2

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  nginx.conf  postgres.conf
atalhos/: matar.sh  rodar-tudo.sh
participacao/: README.md  docker-compose.yml
src/: alexdb_client.rs  atomic_fd.rs  main.rs  schema.rs  socket_client.rs  traffic_observer.rs
src/handlers/: extrato.rs  inserir_transacao.rs  mod.rs  saldo.rs
tests/: extrato  mov_saldo
