[package]
name = "rinha-backend-rust-2"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"]}
chrono = "0.4.33"
deadpool = { version = "0.10.0", features = ["managed"] }
deadpool-postgres = "0.12.1"
libsql-client = "0.33.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
