[package]
name = "rinha-backend-rust-2"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# axum = { version = "0.7.4", features = ["macros"]}
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "david/generic-serve" }
chrono = "0.4.33"
deadpool = { version = "0.10.0", features = ["managed"] }
deadpool-postgres = "0.12.1"
deadqueue = "0.2.4"
reqwest = "0.11.24"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
sql-builder = "3.1.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
