[package]
name = "rinha-backend-rust-2"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# axum = { version = "0.7.4", features = ["macros"]}
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "david/generic-serve", features = ["macros"] }
chrono = "0.4.33"
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc8579d74f96b68ddbd55582c76019ae18cfdc" }
reqwest = "0.11.24"
scc = "2.0.16"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
